<resources>
    <string name="app_name">Court Counter</string>
    <string name="background">Background Image</string>
    <string name="team_a">Team A</string>
    <string name="team_b">Team B</string>
    <string name="free_throw">Free Throw</string>
    <string name="two_points">+2 Points</string>
    <string name="three_points">+3 Points</string>
    <string name="reset">Reset</string>
</resources>
