<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.courtcounter.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/background"
        android:src="@drawable/background"
        android:scaleType="centerCrop"/>

    <ImageView
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:contentDescription="@string/background"
        android:layout_above="@+id/reset_btn"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:text="@string/team_a"
                style="@style/teamName" />

            <TextView
                android:id="@+id/team_a_score"
                android:text="0"
                style="@style/scoreView" />

            <ProgressBar
                android:id="@+id/progressBarA"
                style="@style/progressbar" />

            <Button
                android:onClick="addOneTeamA"
                android:text="@string/free_throw"
                style="@style/buttons" />

            <Button
                style="@style/buttons"
                android:onClick="addTwoToTeamA"
                android:text="@string/two_points" />

            <Button
                style="@style/buttons"
                android:onClick="addThreeToTeamA"
                android:text="@string/three_points" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:text="@string/team_b"
                style="@style/teamName" />

            <TextView
                android:id="@+id/team_b_score"
                android:text="0"
                style="@style/scoreView" />

            <ProgressBar
                android:id="@+id/progressBarB"
                style="@style/progressbar" />

            <Button
                style="@style/buttons"
                android:onClick="addOneTeamB"
                android:text="@string/free_throw" />

            <Button
                style="@style/buttons"
                android:onClick="addTwoToTeamB"
                android:text="@string/two_points" />

            <Button
                style="@style/buttons"
                android:onClick="addThreeToTeamB"
                android:text="@string/three_points" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/reset_btn"
        android:onClick="resetScore"
        android:text="@string/reset"
        style="@style/resetButton" />

</RelativeLayout>
